Fix monospace to work on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,7 +13,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Courier, Poppins, Open Sans, Helvetica Neue, Helvetica, "sans-serif";
+  font-family: 'Courier New', 'Source Code Pro', 'Inconsolata', 'SF Mono', 'Monaco', 'Roboto Mono', 'Source Code Pro', Courier, monospace !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--background-color);
